2023-03-27  Oliver Kiddle  <opk@zsh.org>

	* Shohei YOSHIDA: 51589: Completion/Unix/Command/_nm:
	Update nm options

	* 51603: Completion/Unix/Command/_git: complete dates and times
	in the form that git accepts

2023-03-22  Peter Stephenson  <p.stephenson@samsung.com>

	* 51586: Src/builtin.c: When printf "%s" encounters a byte
	that's not part of a valid multibyte character it should handle
	it a single byte at a time.

2023-03-16  Oliver Kiddle  <opk@zsh.org>

	* 51583: Completion/Unix/Command/_git: update completion of
	git attributes

	* 51582: Completion/Unix/Command/_ssh: openssh 9.3 completion update

	* 51581: Completion/BSD/Command/_fw_update,
	Completion/BSD/Command/_rcctl, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_netstat, Completion/Unix/Command/_ps:
	update completions to cover changes in OpenBSD 7.2

2023-03-14  Bart Schaefer  <schaefer@zsh.org>

	* 51573: Src/builtin.c: additional "typset -p -m" fix for namespaces

2023-03-13  Bart Schaefer  <schaefer@zsh.org>

	* 51572: Functions/Misc/run-help: fix error when running standalone

	* Sven Joachim: 51563: Completion/Debian/Command/_sbuild: unmatched "

2023-03-11  Bart Schaefer  <schaefer@zsh.org>

	* 51558: Doc/Zsh/grammar.yo: Clarify "for" loops + named refs.

	* 51557: Doc/Zsh/mod_ksh93.yo, Src/Modules/ksh93.c: Clarify
	availability of ksh-mode parameters, improve vi-mode detection.

2023-03-11  Oliver Kiddle  <opk@zsh.org>

	* 51539: Completion/Unix/Command/_git: don't complete diff
	options to git blame

2023-03-07  Bart Schaefer  <schaefer@zsh.org>

	* 51534: Util/printdefines: update for recent changes

2023-03-06  Bart Schaefer  <schaefer@zsh.org>

	* 51512: Doc/Zsh/mod_ksh93.yo: More about unsupported features

	* 51511: Doc/Zsh/expn.yo, Doc/Zsh/params.yo: Document namespaces

	* 51510: Src/builtin.c, Src/params.c, Src/utils.c, Src/zsh.h,
	Test/K02parameter.ztst: parameters with a leading namespace are
	skipped in output of "set" and "typeset", add tests for ksh-like