@@ -1,3 +1,8 @@
+2023-03-28  Mikael Magnusson  <mikachu@gmail.com>
+
+	* 51602: Src/jobs.c, Src/signames2.awk: Handle SIGIOT as an
+	alias to SIGABRT if they are the same signal number
+
 2023-03-27  Oliver Kiddle  <opk@zsh.org>
 
 	* Shohei YOSHIDA: 51589: Completion/Unix/Command/_nm:
